# Lighterpp

./: CMakeLists.txt  Design.md  LICENSE  README.md  week1.md
.github/workflows/: ci.yml
src/: RMSNorm.cu  aggregation.cu  gguf.cpp  gguf.h  kernels.cuh  loader.cpp  loader.h  main.cpp  matmul.cu  model.cpp  model.h  multihead_gemv.cu  ops.cpp  ops.h  residual.cu  rope.cu  runtests.cpp  sample.cu  scale.cu  scatter_kv.cu  softmax.cu  swiglu.cu  tensor.cpp  tensor.h  tokenizer.cpp  tokenizer.h
